--- a/requirements.txt
+++ b/requirements.txt
@@ -8,7 +8,8 @@ cffi==1.10.0
 channels==1.1.3
 constantly==15.1.0
 daphne==1.2.0
-Django==1.10.6
+Django==2.0.2
+django-admin-rangefilter==0.3.0
 django-appconf==1.0.2
 django-cors-headers==2.0.2
 django-crontab==0.7.1
@@ -18,14 +19,16 @@ django-taggit==0.22.1
 ewp==0.1.1
 incremental==16.10.1
 M2Crypto==0.25.1
+olefile==0.44
 packaging==16.8
+Pillow==4.3.0
 pkg-resources==0.0.0
 psycopg2==2.7.1
 pycparser==2.17
 pycrypto==2.6.1
 pyparsing==2.2.0
 python-magic==0.4.13
-pytz==2017.2
+pytz==2018.3
 requests==2.13.0
 six==1.10.0
 Twisted==17.1.0
